--- a/app/views/domains/welcome.html.erb
+++ b/app/views/domains/welcome.html.erb
@@ -1,12 +1,16 @@
-<p>
+<div id=welcome>
+  <p>
   Before you proceed to using Foreman you should provide information about one or more domains.
-<p/>
+  <p/>
 
-<p>
-	Foreman considers a domain and a DNS zone as the same thing. That is, if you are planning to manage a site where all the machines are or the form <i>hostname</i>.<b>someware.com</b>
-	then the domain is <b>someware.com</b>. This allows Foreman to associate a puppet variable with a domain/site and automatically append this variable to all external node requests made 
-	by machines at that site.
-</p>
-<p>
-	The <b>fullname</b> field is used for human readability in reports and other pages that refer to domains.
-</p>
+  <p>
+  Foreman considers a domain and a DNS zone as the same thing. That is, if you are planning to manage a site where all the machines are or the form <i>hostname</i>.<b>someware.com</b>
+  then the domain is <b>someware.com</b>. This allows Foreman to associate a puppet variable with a domain/site and automatically append this variable to all external node requests made 
+  by machines at that site.
+  </p>
+  <p>
+  The <b>fullname</b> field is used for human readability in reports and other pages that refer to domains.
+  </p>
+  <%= link_to "New Domain", new_domain_path %>
+</div>
+
