--- a/app/views/hosts/welcome.html.erb
+++ b/app/views/hosts/welcome.html.erb
@@ -1,45 +1,40 @@
-<h1> Welcome </h1>
-<center>Always remember that there is online help available from the two links at the top right of the page.</center>
-<p>
-Before you can use Foreman for the first time there are a few tasks that must be performed. You must decide how you wish to use the software, and update the file
-<b>config/settings.yaml</b> to indicate your selections.
-</p>
+<div id=welcome>
+  <h1> Welcome </h1>
+  <center><b>Always remember that there is online help available from the two links at the top right of the page.</b></center>
+  <p>
+  Before you can use Foreman for the first time there are a few tasks that must be performed. You must decide how you wish to use the software, and update the file
+  <b>config/settings.yaml</b> to indicate your selections.
+  </p>
 
-<p>
-You may operate Foreman in basic mode, in which it acts as a reporting and external node generator or you may also turn on unattended mode operation in which Foreman
-creates and manages the configuration files neccessary to completely configure a new machine. When operating in unattended mode Foreman will require more information,
-so expect more questions, but it will be able to provide Kickstart and Preeseed files for a Redhat or Debian installation.
-</p>
+  <h2>Operating Mode</h2>
+  <p>
+  You may operate Foreman in basic mode, in which it acts as a reporting and external node generator or you may also turn on unattended mode operation in which Foreman
+  creates and manages the configuration files neccessary to completely configure a new machine. When operating in unattended mode Foreman will require more information,
+  so expect more questions, but it will be able to provide Kickstart and Preeseed files for a Redhat or Debian installation (see <a href=http://theforeman.org/projects/foreman/wiki/Unattended_installations>here</a> for more details).
+  </p>
 
-<p>
-To enable unattended mode operation ensure that there is an entry <b>"unattended: true"</b> in your <b>config/settings.yaml</b> file.
-</p>
+  <h2>User Authentication</h2>
+  <p>
+  Foreman, by default, operates in anonymous mode where all operations are performed without reference to the user who is performing the task. If you wish to track the actions of a
+  particular user then it is possible to use an additional authentification stage and provide a user account. At present, authentification is performed against the LDAP
+  service provided by one or more LDAP servers. Microsoft Windows Active Directory provides a suitable LDAP interface so a windows account
+  may be used for this purpose. If you chose to use LDAP authentification then you must provide connection details for your authentification provider on
+  the <a href="http://theforeman.org/projects/foreman/wiki/LDAP_Authentication">Settings/LDAP Authentification</a> page.
+  </p>
 
-<p>
-Foreman, by default, operates in anonymous mode where all operations are performed without reference to the user who is performing the task. If you wish to track the actions of a
-particular user then it is possible to use an additional authentification stage and provide a user account. At present, authentification is performed against the LDAP
-service provided by one or more LDAP servers. Microsoft Windows Active Directory provides a suitable LDAP interface so a windows account
-may be used for this purpose. If you chose to use LDAP authentification then you must provide connection details for your authentification provider on
-the <a href="auth_source_ldaps">Settings/LDAP Authentification</a> page.
-</p>
-
-<p>
-If you wish to use user accounts then ensure that there is an entry in your config/settings.yaml file such as this <b>"ldap: true"</b>.
-</p>
-
-<p>
-	Foreman comes with some importers to ease the burdon of entering loads of data about your current installation. If you are already using puppet the you should consider using some of the rake tasks that have been provided.
-	<ul>
-		<li>
-			rake puppet:import:hosts_and_facts dir = <b>path to your facts directory</b>
-		</li>
+  <h2>Import your data</h2>
+  <p>
+  Foreman comes with some importers to ease the burdon of entering loads of data about your current installation. If you are already using puppet you should consider using some of the rake tasks that have been provided.
+  <ul>
     <li>
-      rake puppet:import:puppet_classes
+    Inventory browser - <a href=http://theforeman.org/projects/foreman/wiki/Puppet_Facts>Importing Puppet Facts</a> 
     </li>
     <li>
-      rake puppet:import:external_nodes
-    </li>
-	</ul>
-</p>
-After you have decided on the two primary modes of operation and performed any appropriate imports then it would be good idea if you visited some of the other configuration pages to see if additional setup is required.
-I would suggest visiting them in the following order <a href="domains" >Settings/Domains</a>,
+    Puppet External Nodes - <a href=http://theforeman.org/projects/foreman/wiki/External_Nodes>Importing Puppet classes and environments</a>
+  </ul>
+  </p>
+  After you have decided on the two primary modes of operation and performed any appropriate imports then it would be good idea if you visited some of the other configuration pages to see if additional setup is required under the <%= link_to "Settings page", settings_path %>.
+
+  <p>You may also find the <a href=http://theforeman.org/projects/foreman/wiki/Howtos>Howtos</a> useful.</p>
+  <p><%= link_to "New Host", new_host_path %></p>
+</div>
